# stm32f103rb-template

./: .gitignore  Cargo.toml  README.md
.cargo/: config
